--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           <!-- Project Card 7 - More coming soon -->
           <div class="project-card">
             <div class="project-header">
-              <img src="jmfc.avif" alt="soccer player lifting a trophy" class="project-image">
+              <img src="jmfc.png" alt="soccer player lifting a trophy" class="project-image">
               <div class="project-overlay">
                 <h3 class="project-title">more coming soon!</h3>
                 <span class="project-status">Ongoing</span>
