fixed color shifting

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       fill="white" />
   </svg>
 
+  <nav class="section-nav">
+    <div class="nav-dot" data-section="about"></div>
+    <div class="nav-dot" data-section="projects"></div>
+    <div class="nav-dot" data-section="skills"></div>
+  </nav>
+
   <!-- About Section -->
   <div class="section" id="about">
     <div class="about-section">
@@ -140,7 +146,7 @@
   <!-- Main Content Container -->
   <div class="main-content">
     <!-- Projects Section -->
-    <div class="section" id="projects"></div>
+    <div class="section"></div>
     <p class="section-title fade-in" data-bg-color="#5C6AC4">projects</p>
     <!-- ADD THIS NEW FILTER SECTION -->
     <div class="filter-container">
@@ -533,7 +539,7 @@
           </div>
 
           <!-- Project Card 7 - Robotic Wheelchair -->
-          <div class="project-card" data-categories="development">
+          <div class="project-card" data-categories="development" id = "projects">
             <div class="project-header">
               <img src="wheelchair.png" alt="robotic wheelchair project" class="project-image">
               <div class="project-overlay">
@@ -589,40 +595,11 @@
               </div>
             </div>
           </div>
-
-          <!-- Project Card 7 - More coming soon -->
-          <div class="project-card">
-            <div class="project-header">
-              <img src="jmfc.png" alt="soccer player lifting a trophy" class="project-image">
-              <div class="project-overlay">
-                <h3 class="project-title">more coming soon!</h3>
-                <span class="project-status">Ongoing</span>
-              </div>
-            </div>
-
-            <div class="project-content">
-              <p class="project-description">
-                I am constantly learning and always have a project going on.
-              </p>
-
-              <div class="project-actions">
-                <a href="https://en.wikipedia.org/wiki/James_Milner" target="_blank" class="action-btn primary">Nothing
-                  here</a>
-              </div>
-
-              <div class="project-timeline">
-                <span>June 2005- Present</span>
-                <span>Personal Project</span>
-              </div>
-            </div>
           </div>
-
-        </div>
-      </section>
-    </div>
+          </section>
 
     <!-- Skills Section -->
-    <p class="section-title fade-in" id="skills" data-bg-color="#00ff88">skills</p>
+    <p class="section-title fade-in" data-bg-color="#00ff88">skills</p>
     <div class="section" id="skills">
       <div class="skill-section" id="skills-content">
         <!-- Skill Nav List (Left) -->
