--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Projects Section -->
     <div class="section"></div>
     <p class="section-title fade-in" data-bg-color="#5C6AC4">projects</p>
-    <!-- ADD THIS NEW FILTER SECTION -->
+    <!--FILTER SECTION -->
     <div class="filter-container">
       <button class="filter-btn active" data-filter="all">all</button>
       <button class="filter-btn" data-filter="development">development</button>
@@ -156,7 +156,7 @@
       <button class="filter-btn" data-filter="both">both</button>
     </div>
 
-    <!-- ADD THIS PROJECT COUNT -->
+    <!-- PROJECT COUNT -->
     <div class="filter-count" id="filterCount">
       Showing <span id="projectCount">7</span> projects
     </div>
