--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="section" id="about">
     <div class="about-section">
       <div class="about-sidebar">
-        <img src="ethan.png" alt="ethan looking hireable" class="personal-photo" />
+        <img src="ethan.jpg" alt="ethan looking hireable" class="personal-photo" />
         <div class="my-title">Ethan Luchs</div>
         <div class="my-title2">Design-Aware Frontend Engineer</div>
         <div class="link-row">
