larger desktop chagnes

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
         <div class="info-section">
           <div class="info-label">Expertise</div>
-          <div class="info-text">
-            Specializing in frontend development with a strong design sensibility
+          <div class="info-texthighlight">
+            I bridge the gap between development and design
           </div>
         </div>
       </div>
@@ -152,8 +152,8 @@
     <div class="filter-container">
       <button class="filter-btn active" data-filter="all">all</button>
       <button class="filter-btn" data-filter="development">development</button>
-      <button class="filter-btn" data-filter="design">design</button>
-      <button class="filter-btn" data-filter="both">both</button>
+      <button class="filter-btn" data-filter="design">ux design</button>
+      <button class="filter-btn" data-filter="both">full-stack ux</button>
     </div>
 
     <!-- PROJECT COUNT -->
