making it bad for ux testing purposes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ethan Luchs</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="jmfc.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 
@@ -115,7 +116,7 @@
         <div class="info-section">
           <div class="info-label">Expertise</div>
           <div class="info-texthighlight">
-            I bridge the gap between development and design
+            I bridge the gap between <span class = "info-highlight">development and design </span>
           </div>
         </div>
       </div>
